--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-h1 {
-  color: green;
+body {
+  background-color: black;
+}
+.calculator-wrapper {
+  max-width: 900px;
+  margin: 0 auto;
+  background-color: #fff;
+  min-height: 200px;
 }
