--- a/style.css
+++ b/style.css
@@ -124,6 +124,9 @@ h1 {
   margin: 0 auto;
   margin-bottom: 5px;
   border: none;
+  outline: none;
+  text-align: right;
+  font-size: 1.5em;
 }
 .operator {
   border: solid 2px black;
@@ -133,6 +136,8 @@ h1 {
 .equals {
   font-size: 50px;
   color: black;
+  background-color: rgba(243, 241, 239, 1);
+  border: solid 2px black;
 }
 /* pseudo classes */
 .btn:hover {
